--- a/check-event/src/assets/css/eventDetail.css
+++ b/check-event/src/assets/css/eventDetail.css
@@ -111,3 +111,33 @@
 ::-webkit-scrollbar-button {
   display: none;
 }
+
+.ant-modal-close-x {
+  display: block;
+  width: 36px !important;
+  height: 36px !important;
+  font-size: 16px;
+  font-style: normal;
+  line-height: 36px !important;
+  text-align: center;
+  text-transform: none;
+  text-rendering: auto;
+}
+
+.ant-modal-header {
+  padding: 16px 24px;
+  color: rgba(0, 0, 0, 0.65);
+  border-bottom: 1px
+  solid #e8e8e8;
+  border-radius: 4px 4px 0 0;
+  height: 2.5rem !important;
+}
+
+.ant-modal-title {
+  margin: 0;
+  color: rgba(0, 0, 0, 0.85);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 10px !important;
+  word-wrap: break-word;
+}
